--- a/package.json
+++ b/package.json
@@ -7,23 +7,22 @@
     "test": "NODE_ENV=test node_modules/.bin/jest --rootDir=tests"
   },
   "dependencies": {
-    "ajv": "^6.10.2",
-    "cookie-parser": "~1.4.4",
+    "ajv": "^6.12.2",
+    "cookie-parser": "^1.4.5",
     "creditcard-generator": "0.0.7",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "glob": "^7.1.6",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "luhn": "^2.4.0",
-    "mongoose": "^5.7.13",
+    "luhn": "^2.4.1",
+    "mongoose": "^5.9.20",
     "morgan": "~1.9.1",
-    "underscore": "^1.9.1",
+    "underscore": "^1.10.2",
     "uniqid": "^5.2.0"
   },
   "devDependencies": {
     "jest": "^24.9.0",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.4"
   }
 }
