--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ node_js:
   - 12.14
 
 cache: npm
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -f tests/coverage/coverage-final.json
