--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=test node_modules/.bin/jest --rootDir=tests"
+    "test": "NODE_ENV=test node_modules/.bin/jest --coverage --rootDir=tests"
   },
   "dependencies": {
     "ajv": "^6.12.2",
