--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "glob": "^7.1.6",
     "http-errors": "~1.6.3",
     "luhn": "^2.4.1",
     "mongoose": "^5.9.20",
@@ -23,6 +22,8 @@
   },
   "devDependencies": {
     "jest": "^24.9.0",
-    "nodemon": "^2.0.4"
+    "moment": "^2.29.1",
+    "nodemon": "^2.0.4",
+    "supertest": "^6.0.1"
   }
 }
